--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -119,7 +119,7 @@
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">商品详情</label>
                                     <div  class="col-md-7" style="padding-left: 0px">
-                                        <textarea id="goods-content" class="textarea" placeholder="商品详情..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
+                                        <textarea id="goods-content" class="textarea goods-content" placeholder="商品详情..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
                                     </div>
 
                                 </div>
@@ -229,10 +229,23 @@
 </script>
 <script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
 <script type="text/javascript" src="__STATIC__/js/template-web.js"></script>
-<script src="__STATIC__/js/plugins/ckeditor-4.8.0/ckeditor.js"></script>
+
+<script src="__STATIC__/js/plugins/kindeditor/kindeditor-all.js"></script>
+<script src="__STATIC__/js/plugins/kindeditor/lang/zh-CN.js"></script>
+
 
 <script type="text/javascript">
+
+    KindEditor.ready(function(K) {
+        K.create('#goods-content', {
+            uploadJson : '/?s=admin/file/upload',
+            fileManagerJson : '../asp/file_manager_json.asp',
+            allowFileManager : true
+        });
+    });
     $(function () {
+
+       // var m_dtail_editor; KindEditor.ready(function(K) { m_dtail_editor = K.create('textarea[name="m_detail"]', { newlineTag:'br', urlType:'relative', langType : 'chinese_simplified', extraFileUploadParams : { program :"mall" } }); });
         $('#goods_type').change(function () {
             var typeId = $('select[name="type"]').val();
             $.ajax({
@@ -255,7 +268,10 @@
 
         $('select[name="type"]').trigger('change');
 
-        var ckeditor = CKEDITOR.replace('goods-content');
+        // var ckeditor = CKEDITOR.replace('goods-content',{
+        //       filebrowserBrowseUrl : '/uploader/upload.php?type=Files',
+        //       filebrowserUploadUrl: '/?s=admin/file/upload&dir=common'
+        // });
         $("#cover-file").fileinput({
             language: 'zh', //设置语言
             uploadUrl: '?s=admin/file/upload',  //上传地址
