--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -2,6 +2,7 @@
 <link href="__STATIC__/js/plugins/bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="__STATIC__/js/plugins/kindeditor/themes/default/default.css" />
 <link rel="stylesheet" href="__STATIC__/js/plugins/kindeditor/plugins/code/prettify.css" />
+<link rel="stylesheet" href="__STATIC__/js/plugins/bootstrapvalidator/css/bootstrapValidator.css"/>
 {include file="layout/left" groupId="$groupId" keywords="" /}
 
 <style type="text/css">
@@ -34,7 +35,7 @@
                         <div class="card-header">
                             <h3 class="card-title">添加商品</h3>
                         </div>
-                        <form role="form" action="{:url('create')}" method="post">
+                        <form id="add-form" role="form" action="{:url('create')}" method="post"  onsubmit="return validateSubmit()">
                             <div class="card-body">
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">所属商城分类</label>
@@ -51,7 +52,7 @@
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">商品供应商</label>
                                     <span class="">
-                                        <select class="form-control"  name="supplier">
+                                        <select class="form-control"  name="supplier" >
                                             {volist name=":getSupplierList()"  id='user'}
                                         <option  value="{$user.id}">{$user.real_name}</option>
                                             {/volist}
@@ -81,9 +82,12 @@
                                     <label for="" class="col-md-2 pull-right">封面图片</label>
                                     <div class="col-sm-4" style="padding-left: 0px">
                                         <input id="cover-file" name="file" type="file"  data-show-caption="true">
-                                        <input  type="hidden" name="cover_path" id="cover-upload-file"  value="" />
-                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                        <!--<input  type="hidden" name="cover_path" id="cover-upload-file"  value="" />-->
+                                        <!--<p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>-->
                                     </div>
+                                    <span class="">
+                                       <input  type="hidden" name="cover_path" id="cover-upload-file"  value="" />
+                                    </span>
                                 </div>
 
                                 <div class="form-inline form-group">
@@ -96,7 +100,6 @@
                                 </div>
 
                                 <div class="form-inline form-group" id="standard_container"></div>
-
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">售价</label>
                                     <span class="">
@@ -109,7 +112,6 @@
                                         <input type="number"  min="0"  name="cost_price" class="form-control" />
                                     </span>
                                 </div>
-
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">商品状态</label>
                                     <select name="state" class="form-control">
@@ -117,15 +119,12 @@
                                         <option>正常出售</option>
                                     </select>
                                 </div>
-
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">商品详情</label>
                                     <div  class="col-md-7" style="padding-left: 0px">
                                         <textarea id="goods-content" class="textarea goods-content" placeholder="商品详情..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
                                     </div>
-
                                 </div>
-
                             </div>
                             <div class="card-footer col-md-offset-2">
                                 <button type="submit" class="btn btn-primary">提交</button>
@@ -230,11 +229,25 @@
     </div>
 </script>
 <script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
+<script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
 <script type="text/javascript" src="__STATIC__/js/template-web.js"></script>
 <script src="__STATIC__/js/plugins/kindeditor/kindeditor-all.js"></script>
 <script src="__STATIC__/js/plugins/kindeditor/lang/zh-CN.js"></script>
 
 <script type="text/javascript">
+    function validateSubmit(){
+        if($('#cover-upload-file').val() == ''){
+            $('#cover-upload-file').closest('.form-group').addClass('has-error');
+            $('#cover-upload-file').closest('.form-group').find('.help-block').show();
+        }
+
+       // alert($('#cover-upload-file').val());
+        if ($("#add-form").data('bootstrapValidator').isValid()) {
+           alert('vvvv');
+        }
+        alert('ggg');
+        return false;
+    }
     KindEditor.ready(function(K) {
         var editor1 = K.create('#goods-content', {
             cssPath : '__STATIC__/js/plugins/kindeditor/plugins/code/prettify.css',
@@ -255,8 +268,7 @@
             }
         });
 
-    });
-
+    })
     $(function () {
         $('#goods_type').change(function () {
             var typeId = $('select[name="type"]').val();
@@ -412,5 +424,79 @@
             }
             $('#custom-container').html(html);
         }
+
+
+        $("#add-form").bootstrapValidator({
+            live: 'disabled',
+            message: 'This value is not valid',
+            fields: {
+                type: {
+                    message: 'The type is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '请选择商品分类'
+                        },
+                    }
+                },
+                supplier:{
+                    message: 'The supplier is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '请选择供应商'
+                        },
+                    }
+                },
+                title: {
+                    message: 'The title is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '商品名称不能为空'
+                        },
+                        stringLength: {
+                            min: 2,
+                            max: 100,
+                            message: '最大长度为100个字符'
+                        },
+                    }
+                },
+                cover_path:{
+                    message: 'The cover_path is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '请上传封面图片'
+                        }
+                    }
+                },
+                multi_path:{
+                    message: 'The cover_path is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '请上传多视角图片'
+                        }
+                    }
+                },
+                w_price:{
+                    message: 'The w_price is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '售价不能为空'
+                        },
+                    }
+                },
+                content:{
+                    message: 'The content is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '商品详情不能为空'
+                        },
+                    }
+                }
+            }
+        });
+
+        // if ($("#add-form").data('bootstrapValidator').isValid()) {
+        //
+        // }
+
     })
 </script>
