--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -83,7 +83,7 @@
                                     <div class="col-sm-4" style="padding-left: 0px">
                                         <input id="cover-file" name="file" type="file"  data-show-caption="true">
                                         <!--<input  type="hidden" name="cover_path" id="cover-upload-file"  value="" />-->
-                                        <!--<p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>-->
+                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                     <span class="">
                                        <input  type="hidden" name="cover_path" id="cover-upload-file"  value="" />
@@ -94,9 +94,11 @@
                                     <label for="" class="col-md-2 pull-right">多视角图片</label>
                                     <div class="col-sm-4" style="padding-left: 0px">
                                         <input id="multi-file" name="file" type="file" data-show-caption="true"  multiple>
-                                        <input  type="hidden" name="multi_path" id="multi-upload-file"  value="" />
                                         <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
+                                    <span class="">
+                                       <input  type="hidden" name="multi_path" id="multi-upload-file"  value="" />
+                                    </span>
                                 </div>
 
                                 <div class="form-inline form-group" id="standard_container"></div>
@@ -241,6 +243,10 @@
             $('#cover-upload-file').closest('.form-group').find('.help-block').show();
         }
 
+        if($('#multi-upload-file').val() == ''){
+            $('#multi-upload-file').closest('.form-group').addClass('has-error');
+            $('#multi-upload-file').closest('.form-group').find('.help-block').show();
+        }
        // alert($('#cover-upload-file').val());
         if ($("#add-form").data('bootstrapValidator').isValid()) {
            alert('vvvv');
@@ -330,6 +336,8 @@
         $('#cover-file').on("fileuploaded", function(event, data) {
             if(data.response){
                 $('#cover-upload-file').val(data.response.data.filename);
+                $('#cover-upload-file').closest('.form-group').removeClass('has-error');
+                $('#cover-upload-file').closest('.form-group').find('.help-block').html('');
             }
         });
         $('#multi-file').on("fileuploaded", function(event, data) {
@@ -337,6 +345,8 @@
                 var str = $('#multi-upload-file').val();
                 var newStr = str ? str+'|'+data.response.data.filename : data.response.data.filename;
                 $('#multi-upload-file').val(newStr);
+                $('#multi-upload-file').closest('.form-group').removeClass('has-error');
+                $('#multi-upload-file').closest('.form-group').find('.help-block').html('');
             }
         });
 
@@ -425,7 +435,6 @@
             $('#custom-container').html(html);
         }
 
-
         $("#add-form").bootstrapValidator({
             live: 'disabled',
             message: 'This value is not valid',
@@ -494,9 +503,7 @@
             }
         });
 
-        // if ($("#add-form").data('bootstrapValidator').isValid()) {
-        //
-        // }
+
 
     })
 </script>
