--- a/web/application/admin/view/goods/index.html
+++ b/web/application/admin/view/goods/index.html
@@ -53,19 +53,19 @@
                             <thead>
                             <tr>
                                 <th width="150px">封面图片</th>
-                                <th width="150px">商品名称</th>
+                                <th >商品名称</th>
                                 <th>总销量</th>
                                 <th>时间</th>
                                 <th>排序</th>
                                 <th>上架</th>
                                 <th>状态</th>
-                                <th>操作</th>
+                                <th width="200px">操作</th>
                             </tr>
                             </thead>
                             <tbody>
                             {volist name='list' id='goods'}
                             <tr>
-                                <td><img src="{$goods.icon_path}" width="100px" /></td>
+                                <td><img src="{$goods.icon_path}" width="100px" style="cursor: pointer" /></td>
                                 <td>{$goods.title}<br />{$goods.supplier_name}</td>
                                 <td>{$goods.sold}</td>
                                 <td>{:date('Y-m-d H:i',$goods.time)}<br />¥{$goods.min_price}起</td>
