--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -9,6 +9,10 @@
         font-size: 20px;
     }
 
+    input[type="date"]:before{
+        color:#A9A9A9;
+        content:attr(placeholder);
+    }
 </style>
 
 <!-- Content Wrapper. Contains page content -->
@@ -36,7 +40,7 @@
                         <h3 class="card-title">订单列表</h3>
                     </div>
                     <div class="row" style="padding-top: 15px;padding-right: 15px">
-                        <div class="col-md-6">
+                        <div class="col-md-10">
                             <form class="form-inline ml-3" action="{:url()}"  method="get">
                                 <div class="input-group">
                                     <select class="form-control" name="state"  placeholder="订单状态">
@@ -46,6 +50,11 @@
                                         {/foreach}
                                     </select>
                                 </div>&nbsp;&nbsp;
+                                <div class = "input-group">
+                                    <input type = "date"  name="start" class = "form-control"  value="{$start}" placeholder="开始日期">
+                                    <span style="display: inline-block;vertical-align: middle;padding-top: 5px"><hr /></span>
+                                    <input type = "date" name="end" class = "form-control" value="{$end}" placeholder="结束日期">
+                                </div>&nbsp;
                                 <div class="input-group">
                                     <input class="form-control form-control-navbar"  name="k" type="search"  value="{$k}" placeholder="订单号/买家/收货人" aria-label="Search">
                                     <div class="input-group-append">
@@ -54,7 +63,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-2">
                             <a class="btn btn-primary pull-right"  target="_blank"  href="{:url('admin/order/export')}" >导出</a>
                         </div>
                     </div>
@@ -83,9 +92,9 @@
                                  <!--<td></td>-->
                                 <td colspan="4" >
                                     {:date('Y-m-d',$order.add_time)}&nbsp&nbsp;
-                                    订单号： {$order.out_id}&nbsp;&nbsp;
-                                    采购商:  {$order.buyer}&nbsp;&nbsp;
-                                    供应商:  {$order.supplierName}&nbsp;&nbsp;
+                                    订单号: {$order.out_id}&nbsp;&nbsp;
+                                    采购商: {$order.buyer}&nbsp;&nbsp;
+                                    供应商: {$order.supplierName}&nbsp;&nbsp;
                                     账期截止日: {:substr($order.pay_date,0,10)}
                                 </td>
                              </tr>
@@ -139,7 +148,7 @@
                                 <td style="vertical-align: middle">
                                     应付: {$order.sum_money|floatval}元
                                 </td>
-                                <td style="vertical-align: middle"><span class="text-success">{:getOrderState($order.state)}</span></td>
+                                <td style="vertical-align: middle">{:getOrderState($order.state,1)}</td>
                                 <td style="vertical-align: middle">
                                     {if $order.state == 0} <!-- 待核价-->
                                     <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#pricing-modal">核价</a>
