--- a/jzdc-services/css/index.css
+++ b/jzdc-services/css/index.css
@@ -4,6 +4,9 @@
     background-image: url("../images/index-wrap.jpg");
     background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
+    height: 100vh;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .index-header {
