--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -82,8 +82,7 @@
                                     <label for="" class="col-md-2 pull-right">封面图片</label>
                                     <div class="col-sm-4" style="padding-left: 0px">
                                         <input id="cover-file" name="file" type="file"  data-show-caption="true">
-                                        <!--<input  type="hidden" name="cover_path" id="cover-upload-file"  value="" />-->
-                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                        <p class="help-block2">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                     <span class="">
                                        <input  type="hidden" name="cover_path" id="cover-upload-file"  value="" />
@@ -94,7 +93,7 @@
                                     <label for="" class="col-md-2 pull-right">多视角图片</label>
                                     <div class="col-sm-4" style="padding-left: 0px">
                                         <input id="multi-file" name="file" type="file" data-show-caption="true"  multiple>
-                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                        <p class="help-block2">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                     <span class="">
                                        <input  type="hidden" name="multi_path" id="multi-upload-file"  value="" />
@@ -105,13 +104,13 @@
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">售价</label>
                                     <span class="">
-                                        <input type="number"  min="0" name="w_price" class="form-control" />
+                                        <input type="text"  min="0" name="w_price" class="form-control" />
                                     </span>
                                 </div>
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">成本价</label>
                                     <span class="">
-                                        <input type="number"  min="0"  name="cost_price" class="form-control" />
+                                        <input type="text"  min="0"  name="cost_price" class="form-control" />
                                     </span>
                                 </div>
                                 <div class="form-inline form-group">
@@ -249,20 +248,10 @@
     KindEditor.ready(function(K) {
         var editor1 = K.create('#goods-content', {
             cssPath : '__STATIC__/js/plugins/kindeditor/plugins/code/prettify.css',
-            //uploadJson : '/kindeditordemo/php/upload_json.php',
             uploadJson : '/?s=admin/file/upload2',
-          //  fileManagerJson : '/kindeditordemo/php/file_manager_json.php',
             allowFileManager : true,
             afterCreate : function() {
                 var self = this;
-                // K.ctrl(document, 13, function() {
-                //     self.sync();
-                //     K('form[name=example]')[0].submit();
-                // });
-                // K.ctrl(self.edit.doc, 13, function() {
-                //     self.sync();
-                //     K('form[name=example]')[0].submit();
-                // });
             }
         });
 
@@ -332,6 +321,9 @@
                 $('#cover-upload-file').closest('.form-group').find('.help-block').html('');
             }
         });
+        $('#cover-file').on('fileclear', function(event,id) {
+            $('#cover-upload-file').val('');
+        });
         $('#multi-file').on("fileuploaded", function(event, data) {
             if(data.response) {
                 var str = $('#multi-upload-file').val();
@@ -340,6 +332,9 @@
                 $('#multi-upload-file').closest('.form-group').removeClass('has-error');
                 $('#multi-upload-file').closest('.form-group').find('.help-block').html('');
             }
+        });
+        $('#multi-file').on('fileclear', function(event) {
+            $('#multi-upload-file').val('');
         });
         //
         $(document).delegate('.color_select','change',function () {
@@ -477,23 +472,28 @@
                     }
                 },
                 w_price:{
-                    message: 'The w_price is not valid',
                     validators: {
                         notEmpty: {
                             message: '售价不能为空'
                         },
+                        regexp: {
+                            regexp: /^([1-9][0-9]*)+(.[0-9]{1,2})?$/,
+                            message: '无效的价格'
+                        }
                     }
                 },
                 cost_price:{
-                    message: 'The cost_price is not valid',
                     validators: {
                         notEmpty: {
                             message: '成本价不能为空'
                         },
+                        regexp: {
+                            regexp: /^([1-9][0-9]*)+(.[0-9]{1,2})?$/,
+                            message: '无效的价格'
+                        }
                     }
                 },
                 content:{
-                    message: 'The content is not valid',
                     validators: {
                         notEmpty: {
                             message: '商品详情不能为空'
