--- a/web/application/admin/view/goods/edit.html
+++ b/web/application/admin/view/goods/edit.html
@@ -81,7 +81,7 @@
                                     <label for="" class="col-md-2 pull-right">封面图片</label>
                                     <div class="col-sm-4" style="padding-left: 0px">
                                         <input id="cover-file" name="file" type="file"  data-show-caption="true">
-                                        <input  type="hidden" name="cover_path" id="cover-upload-file"  value="{$row.icon}" />
+                                        <input  type="hidden" name="cover_path" id="cover-upload-file"  value="{$row.icon}"  data-path="{$row.iconPath}"/>
                                         <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                 </div>
@@ -100,13 +100,13 @@
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">售价</label>
                                     <span class="">
-                                        <input type="number"  min="0" name="w_price"  value="{$row.w_price}" class="form-control" />
+                                        <input type="text"  min="0" name="w_price"  value="{$row.w_price}" class="form-control" />
                                     </span>
                                 </div>
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">成本价</label>
                                     <span class="">
-                                        <input type="number"  min="0"  name="cost_price" value="{$row.cost_price}" class="form-control" />
+                                        <input type="text"  min="0"  name="cost_price" value="{$row.cost_price}" class="form-control" />
                                     </span>
                                 </div>
 
@@ -341,10 +341,9 @@
                 }
             });
         });
-
         $('select[name="type"]').trigger('change');
-
-        var imgTag = '<img src="{$row.icon_path}" class="file-preview-image" >';
+        var path = $('#cover-upload-file').data('path');
+        var imgTag ="<img src='"+path+"' class='file-preview-image' alt='' title=''>";
         $("#cover-file").fileinput({
             language: 'zh', //设置语言
             uploadUrl: '?s=admin/file/upload',  //上传地址
@@ -367,7 +366,6 @@
                 return obj;
             }
         });
-
         var multiImgs = {:json_encode($row.imgList)};
         var multiImgTag = [];
         for (var i =0; i < multiImgs.length;i++){
@@ -400,6 +398,9 @@
                 $('#cover-upload-file').val(data.response.data.filename);
             }
         });
+        $('#cover-file').on('fileclear', function(event,id) {
+            $('#cover-upload-file').val('');
+        });
         $('#multi-file').on("fileuploaded", function(event, data) {
             if(data.response) {
                 var str = $('#multi-upload-file').val();
@@ -407,7 +408,9 @@
                 $('#multi-upload-file').val(newStr);
             }
         });
-
+        $('#multi-file').on('fileclear', function(event) {
+            $('#multi-upload-file').val('');
+        });
         //
         $(document).delegate('.color_select','change',function () {
             var t = $(this).prop("checked");
@@ -549,6 +552,10 @@
                         notEmpty: {
                             message: '售价不能为空'
                         },
+                        regexp: {
+                            regexp: /^([1-9][0-9]*)+(.[0-9]{1,2})?$/,
+                            message: '无效的价格'
+                        }
                     }
                 },
                 cost_price:{
@@ -557,6 +564,10 @@
                         notEmpty: {
                             message: '成本价不能为空'
                         },
+                        regexp: {
+                            regexp: /^([1-9][0-9]*)+(.[0-9]{1,2})?$/,
+                            message: '无效的价格'
+                        }
                     }
                 },
                 content:{
