--- a/jzdc-services/css/index.css
+++ b/jzdc-services/css/index.css
@@ -10,13 +10,13 @@
 }
 
 .index-header {
-    padding: 0.4rem;
+    padding: 0.532rem;
 }
 
 .index-header .index-logo {
-    width: 2.35rem;
+    width: 3.1255rem;
     background: url("../images/index-logo.png");
-    background-size: 2.35rem 0.66rem;
+    background-size: 3.1255rem 0.8778rem;
     -webkit-background-size: 2.35rem 0.66rem;
     display: block;
     height: 0.66rem;
@@ -24,31 +24,30 @@
 }
 
 .index-header .close {
-    width: 0.42rem;
+    width: 0.5586rem;
     background: url("../images/close.png");
-    background-size: 0.42rem 0.42rem;
-    -webkit-background-size: 0.42rem 0.42rem;
+    background-size: 0.5586rem 0.5586rem;
+    -webkit-background-size: 0.5586rem 0.5586rem;
     display: block;
-    height: 0.42rem;
+    height: 0.5586rem;
     float: right;
 }
 
 .index-header .index-close{
     float: right;
-    width: 0.42rem;
-    height: 0.42rem;
+    width: 0.5586rem;
+    height: 0.5586rem;
     background: url("../images/close.png");
-    -webkit-background-size: 0.42rem 0.42rem;
-    background-size: 0.42rem 0.42rem;
+    -webkit-background-size: 0.5586rem 0.5586rem;
+    background-size: 0.5586rem 0.5586rem;
 }
 
 .index-menu{
-    padding-top: 1.8rem;
-    width:5.8rem;
-    margin: 0 auto;
+    width:7.714rem;
+    margin: -2.394rem auto 0;
 }
 .index-menu .menu-row+.menu-row{
-    margin-top: 0.45rem;
+    margin-top: 0.5985rem;
 }
 .menu-item-left{
     float: left;
@@ -59,10 +58,10 @@
 }
 
 .icon{
-    width: 2.48rem;
-    height: 1.89rem;
-    -webkit-background-size: 2.48rem 1.89rem;
-    background-size: 2.48rem 1.89rem;
+    width: 3.2984rem;
+    height: 2.5137rem;
+    -webkit-background-size: 3.2984rem 2.5137rem;
+    background-size: 3.2984rem 2.5137rem;
     background-repeat: no-repeat;
 }
 
@@ -70,24 +69,6 @@
     display: block;
     width: 100%;
     height: 100%;
-}
-
-@media screen and (max-width: 320px) {
-    .index-menu{
-        padding-top: 1.2rem;
-        width:5.32rem;
-        margin: 0 auto;
-    }
-    .icon{
-        width: 2.36rem;
-        height: 1.8rem;
-        -webkit-background-size: 2.36rem 1.8rem;
-        background-size: 2.36rem 1.8rem;
-        background-repeat: no-repeat;
-    }
-    .index-menu .menu-row+.menu-row{
-        margin-top: 0.38rem;
-    }
 }
 
 .icon1{
