--- a/jzdc-services/css/insur.css
+++ b/jzdc-services/css/insur.css
@@ -1,6 +1,6 @@
 .insur-wrap{
     background-color: #07274b;
-    background-image: url("../images/insur-1-bg.png");
+    background-image: url("../images/insur-1-bg.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height: 100vh;
